@@ -25,6 +25,10 @@ Paul Davis
   Jackdmp changes log
 ---------------------------
 
+2009-06-16 Stephane Letz  <letz@grame.fr>
+
+	* Correct JackFifo::TimedWait for EINTR handling.
+
 2009-06-05 Stephane Letz  <letz@grame.fr>
 
 	* Correct jack_set_error_function, jack_set_info_function and jack_set_thread_creator functions.
